--- a/work/Pages/WebsocketPvp.xaml
+++ b/work/Pages/WebsocketPvp.xaml
@@ -9,29 +9,6 @@
       Title="PVP">
 
     <Page.Resources>
-        <Style x:Key="ctrlButton" TargetType="Button">
-            <Setter Property="Background" Value="#E7E0F8"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="Padding" Value="10"/>
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="20"
-                                Padding="{TemplateBinding Padding}"
-                                >
-                            <ContentPresenter HorizontalAlignment="Center"
-                                              VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
 
         <Style x:Key="commonBtnStyle" TargetType="Button">
             <EventSetter Event="Button.Click" Handler="CommonBtnClickHandler"/>
@@ -53,15 +30,14 @@
                 </Setter.Value>
             </Setter>
         </Style>
-
         <BitmapImage x:Key="chessBoardImage" UriSource="pack://application:,,,/Images/chessBoard.png" />
         <ImageBrush x:Key="chessBoardBackground" ImageSource="{StaticResource chessBoardImage}"/>
-        <DropShadowEffect x:Key="DropShadowEffect" ShadowDepth="5" BlurRadius="10" Color="Gray" />
+        
     </Page.Resources>
 
-    <Grid Background="#F0F0F0">
+    <Grid Background="#F0F0F0" Width="800" Height="450">
 
-        <Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -86,9 +62,38 @@
 
         <!--倒计时-->
         <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="#4A8CCB"/>
-        <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
-        <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding MatchText, Mode=TwoWay, TargetNullValue=开始匹配}" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
+        <Border Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="7" Name="border1" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
+                    <GradientStop Offset="0" Color="#00CED1"/>
+                    <GradientStop Offset="1" Color="#59E6B5"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <Canvas ClipToBounds="True" >
+                    <Border Canvas.Right="-40" Canvas.Top="-60" Grid.RowSpan="4" Width="110" Height="110"  CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Top"  HorizontalAlignment="Right" Canvas.Left="92"/>
+                    <Border Canvas.Right="-50" Canvas.Top="-3" Grid.RowSpan="4" Width="30" Height="30" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="17"/>
 
+                </Canvas>
+                <Button Background="Transparent" BorderBrush="Transparent" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Foreground="White" FontSize="18" Click="jumpBackToMain" Style="{StaticResource RoundedButtonStyle}"/>
+            </Grid>
+        </Border>
+        <Border Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="7" Name="border2" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
+                    <GradientStop Offset="0" Color="#00CED1"/>
+                    <GradientStop Offset="1" Color="#59E6B5"/>
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <Canvas ClipToBounds="True" >
+                    <Border Canvas.Right="-40" Canvas.Top="-60" Grid.RowSpan="4" Width="110" Height="110"  CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Top"  HorizontalAlignment="Right" Canvas.Left="92"/>
+                    <Border Canvas.Right="-50" Canvas.Top="20" Grid.RowSpan="4" Width="30" Height="30" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="5"/>
+
+                </Canvas>
+                <Button Background="Transparent" BorderBrush="Transparent" Content="{Binding MatchText, Mode=TwoWay, TargetNullValue=开始匹配}" Foreground="White" FontSize="18" Click="startToMatch" Style="{StaticResource RoundedButtonStyle}"/>
+            </Grid>
+        </Border>
         <Grid x:Name="myCanvasFatherGrid" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="7" Grid.RowSpan="6">
 
             <Border CornerRadius="30" BorderBrush="Transparent" BorderThickness="1" Background="#FF4A8CCB" Effect="{StaticResource DropShadowEffect}">
@@ -181,7 +186,7 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Viewbox Stretch="Uniform">
                 <Ellipse HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="120" >
@@ -202,7 +207,7 @@
                 <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
             <Viewbox Stretch="Uniform" Grid.Column="1">
