--- a/work/mainpage.xaml
+++ b/work/mainpage.xaml
@@ -8,7 +8,9 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage" >
-    <Grid>
+    <Viewbox>
+    <Grid Width="800" Height="450">
         <Frame x:Name="mainContent" Grid.Column="0" Grid.Row="0" NavigationUIVisibility="Hidden"/>
     </Grid>
+</Viewbox>
 </Window>
