--- a/work/Pages/HistoryPage.xaml
+++ b/work/Pages/HistoryPage.xaml
@@ -90,7 +90,7 @@
                 <ColumnDefinition Width="*" />
 
             </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Name="border1" Margin="50,5,0,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+            <Border Grid.Column="0" Name="border1" Margin="50,5,0,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" >
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                         <GradientStop Offset="0" Color="#00CED1"/>
@@ -107,7 +107,7 @@
                 </Grid>
             </Border>
 
-            <Border Grid.Column="1" Name="border2" Margin="25,5,25,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+            <Border Grid.Column="1" Name="border2" Margin="25,5,25,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" >
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                         <GradientStop Offset="0" Color="#00CED1"/>
@@ -123,7 +123,7 @@
                     <Button Background="Transparent" BorderBrush="Transparent" Content="下一步" Click="nextButton" Style="{StaticResource RoundedButtonStyle}" FontSize="18" Foreground="White"/>
                 </Grid>
             </Border>
-            <Border Grid.Column="2" Name="border3" Margin="0,5,50,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+            <Border Grid.Column="2" Name="border3" Margin="0,5,50,5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" >
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                         <GradientStop Offset="0" Color="#00CED1"/>
@@ -147,11 +147,19 @@
             </Grid.ColumnDefinitions>
 
             <!-- 历史记录列表 -->
-            <ListBox x:Name="historyListBox" Margin="5" ItemsSource="{Binding HistoryViewModel.MoveRecords}"  Background="LightYellow" BorderBrush="Gray" BorderThickness="0"  Template="{StaticResource ListBoxTemplate}" >
+            <ListBox x:Name="historyListBox" Margin="5" ItemsSource="{Binding HistoryViewModel.MoveRecords}"  Background="LightYellow" BorderBrush="Gray" BorderThickness="0"  Template="{StaticResource ListBoxTemplate}" SelectionChanged="historyListBox_SelectionChanged" >
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Button Content="{Binding MoveString}" Command="{Binding DataContext.SelectCommand, 
-                                RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding}" Style="{StaticResource MoveRecordButtonStyle}"/>
+                        <Button Command="{Binding DataContext.SelectCommand, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding}" Style="{StaticResource MoveRecordButtonStyle}">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding id}" Grid.Column="0" Margin="5" VerticalAlignment="Center"/>
+                                <TextBlock Text="{Binding result}" Grid.Column="1" Margin="5" VerticalAlignment="Center"/>
+                            </Grid>
+                        </Button>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
