--- a/work/Pages/Local.xaml
+++ b/work/Pages/Local.xaml
@@ -159,7 +159,7 @@
                 </Border>
             </Grid>
 
-        <Border Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="7" Name="border1" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+        <Border Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="7" Name="border1" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" >
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                     <GradientStop Offset="0" Color="#00CED1"/>
@@ -175,7 +175,7 @@
                 <Button Background="Transparent" BorderBrush="Transparent" Content="返回主页" Click="jumpBackToMain" Style="{StaticResource RoundedButtonStyle}" FontSize="18" Foreground="White"/>
             </Grid>
         </Border>
-        <Border Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="7" Name="border2" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+        <Border Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="7" Name="border2" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                     <GradientStop Offset="0" Color="#00CED1"/>
