--- a/work/Pages/WebsocketPvp.xaml
+++ b/work/Pages/WebsocketPvp.xaml
@@ -62,7 +62,7 @@
 
         <!--倒计时-->
         <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="#4A8CCB"/>
-        <Border Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="7" Name="border1" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+        <Border Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="7" Name="border1" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                     <GradientStop Offset="0" Color="#00CED1"/>
@@ -78,7 +78,7 @@
                 <Button Background="Transparent" BorderBrush="Transparent" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Foreground="White" FontSize="18" Click="jumpBackToMain" Style="{StaticResource RoundedButtonStyle}"/>
             </Grid>
         </Border>
-        <Border Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="7" Name="border2" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave" Effect="{StaticResource DropShadowEffect}">
+        <Border Grid.Column="5" Grid.ColumnSpan="2" Grid.Row="7" Name="border2" Margin="5" CornerRadius="5" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,1">
                     <GradientStop Offset="0" Color="#00CED1"/>
@@ -232,7 +232,7 @@
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="6*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="1" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="1" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="80" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         </Grid>
         <Grid Grid.Column="6" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
@@ -245,7 +245,7 @@
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Name="CountdownTextBlock2" Grid.Column="1" Grid.Row="1" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock Name="CountdownTextBlock2" Grid.Column="1" Grid.Row="1" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="80" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         </Grid>
     </Grid>
 </Page>
